--- a/api/setting/.env
+++ b/api/setting/.env
@@ -1,3 +1,4 @@
 PORT = 3030
 HOST = 127.0.0.1
 MONGO = "mongodb+srv://mouliarjak:mouliarjak@database.glq53.mongodb.net/?retryWrites=true&w=majority&appName=database"
+JWT_SECRET = 'mouliarjakulanthaivel123456789'
